Fixing issues that were affecting navigation on mobile devices per query-mobile swipe events conflict with Bootstrap carousel.

--- a/wwwroot/css/mobile.css
+++ b/wwwroot/css/mobile.css
@@ -34,6 +34,7 @@
     .container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse {
         margin-left: 0;
         margin-right: 0;
+        position: relative;
     }
 
     .navbar-inverse .navbar-brand {
