--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -203,16 +203,20 @@ sup {
 
 /********************* TOGGLE *********************/
 .navbar-toggle {
-    position: relative;
     float: right;
-    background-color: #4e43ba !important;
+    background-color: #4e43ba;
     border: none;
     border-radius: 0px;
     padding: 10px;
-    width: 40px !important;
-    height: 40px;
-    margin-right: 20px;
-    margin-top: 20px;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 2%;
 }
 
 .navbar-toggle .icon-bar {
